[metadata]
name = pypi_upload_test_2.7
version = 0.0.1a0
description = Test package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coatl-dev/actions
author = César Román
author_email = cesar@coatl.dev
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2 :: Only
    Programming Language :: Python :: 2.7

[options]
packages = find:
python_requires = ==2.7.18
package_dir =
    =src

[options.packages.find]
where = src
